--- a/jp-research.html
+++ b/jp-research.html
@@ -192,98 +192,78 @@
     }
   </script>
 
-  <nav class="display-mobile">
+<nav class="display-mobile">
 
-    <div class='nav-container'>
+  <style>        
+    nav .slide .name {
+    font-size: 0.65em; /* 根据需要调整 */
+    line-height: 1.1em; /* 控制两行间距 */
+    text-align: left; /* 居左显示 */
+    display: block;
+  }
+  </style>
 
-      <div>
+<div class='nav-container'>
+  <!-- Logo -->
+  <div>
+    <a class='slide' href='#'>
+      <span class='element'>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+      <span class='name'><a href="jp.html"><img src="./images/logo.png" style="width:30px; position:relative; top:-30px; left:6px;"></a></span>
+    </a>
+  </div>
 
-        <a class='slide' href='#'>
-          <span class='element'>H&nbsp;&nbsp;</span>
-          <span class='name'>徐泓</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#education'>
-          <span class='element'>Ed&nbsp;&nbsp;</span>
-          <span class='name'>学歴</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#research-interests'>
-          <span class='element'>Re&nbsp;&nbsp;</span>
-          <span class='name'>研究</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#publications'>
-          <span class='element'>Pb&nbsp;&nbsp;</span>
-          <span class='name'>論文</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#awards'>
-          <span class='element'>Ad&nbsp;&nbsp;</span>
-          <span class='name'>受賞</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='jp-contact.html'>
-          <span class='element'>C&nbsp;&nbsp;&nbsp;</span>
-          <span class='name'>連絡</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="https://www.linkedin.com/in/xuhong/" target="_blank">
-          <span class='element'>In</span>
-          <span class='name'>LinkedIn</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="mailto:h.xu@tum.de" target="_blank">
-          <span class='element'>Em&nbsp;&nbsp;</span>
-          <span class='name'>メール</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank">
-          <span class='element'>Sc&nbsp;&nbsp;</span>
-          <span class='name'>学者</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Wb&nbsp;&nbsp;</span>
-          <span class='name'>微博</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Wx&nbsp;&nbsp;</span>
-          <span class='name'>微信</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Dy&nbsp;&nbsp;</span>
-          <span class='name'>抖音</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Xh&nbsp;&nbsp;</span>
-          <span class='name'>小紅書</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Bi&nbsp;&nbsp;</span>
-          <span class='name'>嗶哩</span>
-        </a>
-      </div>
-    </div>
-  </nav>
+  <!-- Home -->
+  <div>
+    <a class='slide' href='jp.html'>
+      <span class='element'>H</span>
+      <span class='name'>Home<br>ホーム</span>
+    </a>
+  </div>
 
+  <!-- Research -->
+  <div>
+    <a class='slide' href='jp-research.html'>
+      <span class='element'>Re</span>
+      <span class='name'>Research<br>研究</span>
+    </a>
+  </div>
+
+  <!-- Publications -->
+  <div>
+    <a class='slide' href='jp-research.html#publications'>
+      <span class='element'>Pb</span>
+      <span class='name'>Publications<br>出版物</span>
+    </a>
+  </div>
+
+  <!-- Education -->
+  <div>
+    <a class='slide' href='jp-resume.html'>
+      <span class='element'>Ed</span>
+      <span class='name'>Education<br>学歴</span>
+    </a>
+  </div>
+
+  <!-- Activities -->
+  <div>
+    <a class='slide' href='jp-activities.html'>
+      <span class='element'>At</span>
+      <span class='name'>Activities<br>活動</span>
+    </a>
+  </div>
+
+  <!-- Contact -->
+  <div>
+    <a class='slide' href='jp-contact.html'>
+      <span class='element'>Co</span>
+      <span class='name'>Contact<br>連絡</span>
+    </a>
+  </div>
+
+</div>
+</nav>
+<div class="display-mobile" style="height: 60px;"></div> 
+<!-- 60px 替换为你的导航实际高度 -->
 
 </head>
 
