--- a/ru-contact.html
+++ b/ru-contact.html
@@ -215,82 +215,67 @@
   <nav class="display-mobile">
 
     <div class='nav-container'>
+      <!-- Logo -->
       <div>
         <a class='slide' href='#'>
-          <span class='element'>X</span>
-          <span class='name'>Хонг</span>
+          <span class='element'>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+          <span class='name'><a href="ru.html"><img src="./images/logo.png" style="width:30px; position:relative; top:-30px; left:6px;"></a></span>
         </a>
       </div>
+  
+      <!-- Home -->
       <div>
-        <a class='slide' href='#education'>
-          <span class='element'>Ob</span>
-          <span class='name'>Образование</span>
+        <a class='slide' href='ru.html'>
+          <span class='element'>Д</span>
+          <span class='name'>Дом</span>
         </a>
       </div>
+  
+    <!-- Research -->
+    <div>
+      <a class='slide' href='ru-research.html'>
+        <span class='element'>Ис</span>
+        <span class='name'>Исследование</span>
+      </a>
+    </div>
+  
+      <!-- Publications -->
       <div>
-        <a class='slide' href='#research-interests'>
-          <span class='element'>Is</span>
-          <span class='name'>Исследовать</span>
+        <a class='slide' href='ru-research.html#publications'>
+          <span class='element'>Ст</span>
+          <span class='name'>Статьи</span>
         </a>
       </div>
+  
+    <!-- Education -->
+    <div>
+      <a class='slide' href='ru-resume.html'>
+        <span class='element'>Об</span>
+        <span class='name'>Образование</span>
+      </a>
+    </div>
+  
+      <!-- Activities -->
       <div>
-        <a class='slide' href='#publications'>
-          <span class='element'>Pb</span>
-          <span class='name'>Публикация</span>
+        <a class='slide' href='ru-activities.html'>
+          <span class='element'>Де</span>
+          <span class='name'>Дело</span>
         </a>
       </div>
-      <div>
-        <a class='slide' href='#awards'>
-          <span class='element'>Ha</span>
-          <span class='name'>Награды</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="https://www.linkedin.com/in/xuhong/" target="_blank">
-          <span class='element'>Li</span>
-          <span class='name'>LinkedIn</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="mailto:h.xu@tum.de" target="_blank">
-          <span class='element'>Ea</span>
-          <span class='name'>Эл.адрес</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank">
-          <span class='element'>Uc</span>
-          <span class='name'>Ученый</span>
-        </a>
-      </div>
-
+  
+      <!-- Contact -->
       <div>
         <a class='slide' href='ru-contact.html'>
-          <span class='element'>K</span>
-          <span class='name'>Контакт</span>
+          <span class='element'>Св</span>
+          <span class='name'>Связь</span>
         </a>
       </div>
-
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Wb&nbsp;&nbsp;</span>
-          <span class='name'>Вейбо</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Wx&nbsp;&nbsp;</span>
-          <span class='name'>Вичат</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Dy&nbsp;&nbsp;</span>
-          <span class='name'>Тик Ток</span>
-        </a>
-      </div>
+  
     </div>
   </nav>
+  
+  <div class="display-mobile" style="height: 60px;"></div>
+  <!-- 60px 替换为你的导航实际高度 -->
 
 </head>
 
@@ -426,7 +411,7 @@
 
       <div class="topnav">
         <a href="ru-contact.html" class="active">
-          <h3 class="display-mobile">Доктор Хонг Сюй</h3>
+          <h3 class="display-mobile">Д-р Хонг Сюй</h3>
         </a>
         <div id="myLinks">
           <ul>
