--- a/ar-contact.html
+++ b/ar-contact.html
@@ -209,95 +209,76 @@
 
   <nav class="display-mobile">
 
-    <div class='nav-container'>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>H</span>
-          <span class='name'>Hong</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#education'>
-          <span class='element'>Ed</span>
-          <span class='name'>Education</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#research-interests'>
-          <span class='element'>Re</span>
-          <span class='name'>Research</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#publications'>
-          <span class='element'>Pb</span>
-          <span class='name'>Publication</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#awards'>
-          <span class='element'>Ad</span>
-          <span class='name'>Awards</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='ar-contact.html'>
-          <span class='element'>C</span>
-          <span class='name'>Contact</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="https://www.linkedin.com/in/xuhong/" target="_blank">
-          <span class='element'>In</span>
-          <span class='name'>LinkedIn</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="mailto:h.xu@tum.de" target="_blank">
-          <span class='element'>Em</span>
-          <span class='name'>Email</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank">
-          <span class='element'>Sc</span>
-          <span class='name'>Scholar</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Wb&nbsp;&nbsp;</span>
-          <span class='name'>Weibo</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Wx&nbsp;&nbsp;</span>
-          <span class='name'>Wechat</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Dy&nbsp;&nbsp;</span>
-          <span class='name'>Tiktok</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Xh&nbsp;&nbsp;</span>
-          <span class='name'>XiaoHS</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Bi&nbsp;&nbsp;</span>
-          <span class='name'>Bilibili</span>
-        </a>
-      </div>
+    <style>        
+      nav .slide .name {
+        font-size: 0.66em; /* 根据需要调整 */
+        line-height: 1.1em; /* 控制两行间距 */
+        text-align: left; /* 居左显示 */
+        display: block;
+      }
+    </style>
 
+  <div class='nav-container'>
+    <!-- Logo -->
+    <div>
+      <a class='slide' href='#'>
+        <span class='element'>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+        <span class='name'><a href="ar.html"><img src="./images/logo.png" style="width:30px; position:relative; top:-30px; left:6px;"></a></span>
+      </a>
     </div>
-  </nav>
 
+    <!-- Home -->
+    <div>
+      <a class='slide' href='ar.html'>
+        <span class='element'>H</span>
+        <span class='name'>Home<br>الرئيسية</span>
+      </a>
+    </div>
+
+    <!-- Research -->
+    <div>
+      <a class='slide' href='ar-research.html'>
+        <span class='element'>B</span>
+        <span class='name'>Research<br>بحث</span>
+      </a>
+    </div>
+
+    <!-- Publications -->
+    <div>
+      <a class='slide' href='ar-research.html#publications'>
+        <span class='element'>N</span>
+        <span class='name'>Publications<br>منشورات</span>
+      </a>
+    </div>
+
+    <!-- Education -->
+    <div>
+      <a class='slide' href='ar-resume.html'>
+        <span class='element'>E</span>
+        <span class='name'>Education<br>تعليم</span>
+      </a>
+    </div>
+
+    <!-- Activities -->
+    <div>
+      <a class='slide' href='ar-activities.html'>
+        <span class='element'>F</span>
+        <span class='name'>Activities<br>نشاط</span>
+      </a>
+    </div>
+
+    <!-- Contact -->
+    <div>
+      <a class='slide' href='ar-contact.html'>
+        <span class='element'>C</span>
+        <span class='name'>Contact<br>تواصل</span>
+      </a>
+    </div>
+
+  </div>
+</nav>
+<div class="display-mobile" style="height: 60px;"></div> 
+<!-- 60px 替换为你的导航实际高度 -->
 </head>
 
 <body>
