--- a/cn-contact.html
+++ b/cn-contact.html
@@ -186,97 +186,79 @@
 
 <script src="js/language_cn.js"></script>
 
-  <nav class="display-mobile">
+<nav class="display-mobile">
 
-    <div class='nav-container'>
+  <style>        
+    nav .slide .name {
+    font-size: 0.65em; /* 根据需要调整 */
+    line-height: 1.1em; /* 控制两行间距 */
+    text-align: left; /* 居中显示 */
+    display: block;
+  }
+  </style>
 
-      <div>
+<div class='nav-container'>
+  <!-- Logo -->
+  <div>
+    <a class='slide' href='#'>
+      <span class='element'>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+      <span class='name'><a href="cn.html"><img src="./images/logo.png" style="width:30px; position:relative; top:-30px; left:6px;"></a></span>
+    </a>
+  </div>
 
-        <a class='slide' href='cn.html'>
-          <span class='element'>H&nbsp;&nbsp;&nbsp;</span>
-          <span class='name'>徐泓</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='mailto:h.xu@tum.de'>
-          <span class='element'>Em&nbsp;&nbsp;</span>
-          <span class='name'>邮件</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="https://www.linkedin.com/in/xuhong/" target="_blank">
-          <span class='element'>In&nbsp;&nbsp;</span>
-          <span class='name'>领英</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='https://www.zhihu.com/people/dr.of.nothing'>
-          <span class='element'>Zh&nbsp;&nbsp;</span>
-          <span class='name'>知乎</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Tw&nbsp;&nbsp;</span>
-          <span class='name'>推特</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank">
-          <span class='element'>Sc&nbsp;&nbsp;</span>
-          <span class='name'>学者</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="#" target="_blank">
-          <span class='element'>Gt&nbsp;&nbsp;</span>
-          <span class='name'>GITHUB</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="#" target="_blank">
-          <span class='element'>Is&nbsp;&nbsp;</span>
-          <span class='name'>INSTA</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="https://photo.h-xu.com" target="_blank">
-          <span class='element'>Ph&nbsp;&nbsp;</span>
-          <span class='name'>摄影</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Wb&nbsp;&nbsp;</span>
-          <span class='name'>微博</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Wx&nbsp;&nbsp;</span>
-          <span class='name'>微信</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Dy&nbsp;&nbsp;</span>
-          <span class='name'>抖音</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Xh&nbsp;&nbsp;</span>
-          <span class='name'>小红书</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>BL&nbsp;&nbsp;</span>
-          <span class='name'>哔哩</span>
-        </a>
-      </div>
-    </div>
-  </nav>
+  <!-- Home -->
+  <div>
+    <a class='slide' href='cn.html'>
+      <span class='element'>H</span>
+      <span class='name'>Home<br>首页</span>
+    </a>
+  </div>
+
+  <!-- Research -->
+  <div>
+    <a class='slide' href='cn-research.html'>
+      <span class='element'>Re</span>
+      <span class='name'>Research<br>研究</span>
+    </a>
+  </div>
+
+  <!-- Publications -->
+  <div>
+    <a class='slide' href='cn-research.html#publications'>
+      <span class='element'>Pb</span>
+      <span class='name'>Publications<br>出版物</span>
+    </a>
+  </div>
+
+  <!-- Education -->
+  <div>
+    <a class='slide' href='cn-resume.html'>
+      <span class='element'>Ed</span>
+      <span class='name'>Education<br>教育背景</span>
+    </a>
+  </div>
+
+  <!-- Activities -->
+  <div>
+    <a class='slide' href='cn-activities.html'>
+      <span class='element'>At</span>
+      <span class='name'>Activities<br>活动</span>
+    </a>
+  </div>
+
+  <!-- Contact -->
+  <div>
+    <a class='slide' href='cn-contact.html'>
+      <span class='element'>Co</span>
+      <span class='name'>Contact<br>联系我</span>
+    </a>
+  </div>
+
+</div>
+</nav>
+<div class="display-mobile" style="height: 60px;"></div> 
+<!-- 60px 替换为你的导航实际高度 -->
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 
