--- a/kr-resume.html
+++ b/kr-resume.html
@@ -202,96 +202,76 @@
 
   <nav class="display-mobile">
 
-    <div class='nav-container'>
+    <style>        
+      nav .slide .name {
+      font-size: 0.66em; /* 根据需要调整 */
+      line-height: 1.1em; /* 控制两行间距 */
+      text-align: left; /* 居左显示 */
+      display: block;
+    }
+    </style>
 
-      <div>
-
-        <a class='slide' href='#'>
-          <span class='element'>H&nbsp;&nbsp;</span>
-          <span class='name'>쉬홍</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#education'>
-          <span class='element'>Ed&nbsp;&nbsp;</span>
-          <span class='name'>교육</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#research-interests'>
-          <span class='element'>Re&nbsp;&nbsp;</span>
-          <span class='name'>연구</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#publications'>
-          <span class='element'>Pb&nbsp;&nbsp;</span>
-          <span class='name'>간행물</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#awards'>
-          <span class='element'>Ad&nbsp;&nbsp;</span>
-          <span class='name'>수상</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='kr-contact.html'>
-          <span class='element'>C&nbsp;&nbsp;&nbsp;</span>
-          <span class='name'>연결</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="https://www.linkedin.com/in/xuhong/" target="_blank">
-          <span class='element'>In&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-          <span class='name'>링크드인</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="mailto:h.xu@tum.de" target="_blank">
-          <span class='element'>Em&nbsp;&nbsp;</span>
-          <span class='name'>이메일</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank">
-          <span class='element'>Sc&nbsp;&nbsp;</span>
-          <span class='name'>스칼라</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Wb&nbsp;&nbsp;</span>
-          <span class='name'>웨이보</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Wx&nbsp;&nbsp;</span>
-          <span class='name'>위챗</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Dy&nbsp;&nbsp;</span>
-          <span class='name'>틱톡</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Xh&nbsp;&nbsp;</span>
-          <span class='name'>붉은책</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Bi&nbsp;&nbsp;</span>
-          <span class='name'>빌리</span>
-        </a>
-      </div>
+  <div class='nav-container'>
+    <!-- Logo -->
+    <div>
+      <a class='slide' href='#'>
+        <span class='element'>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+        <span class='name'><a href="kr.html"><img src="./images/logo.png" style="width:30px; position:relative; top:-30px; left:6px;"></a></span>
+      </a>
     </div>
 
-  </nav>
+    <!-- Home -->
+    <div>
+      <a class='slide' href='kr.html'>
+        <span class='element'>H</span>
+        <span class='name'>Home<br>홈</span>
+      </a>
+    </div>
+
+    <!-- Research -->
+    <div>
+      <a class='slide' href='kr-research.html'>
+        <span class='element'>Re</span>
+        <span class='name'>Research<br>연구</span>
+      </a>
+    </div>
+
+    <!-- Publications -->
+    <div>
+      <a class='slide' href='kr-research.html#publications'>
+        <span class='element'>Pb</span>
+        <span class='name'>Publications<br>출판물</span>
+      </a>
+    </div>
+
+    <!-- Education -->
+    <div>
+      <a class='slide' href='kr-resume.html'>
+        <span class='element'>Ed</span>
+        <span class='name'>Education<br>교육</span>
+      </a>
+    </div>
+
+    <!-- Activities -->
+    <div>
+      <a class='slide' href='kr-activities.html'>
+        <span class='element'>At</span>
+        <span class='name'>Activities<br>활동</span>
+      </a>
+    </div>
+
+    <!-- Contact -->
+    <div>
+      <a class='slide' href='kr-contact.html'>
+        <span class='element'>Co</span>
+        <span class='name'>Contact<br>연락</span>
+      </a>
+    </div>
+
+  </div>
+</nav>
+<div class="display-mobile" style="height: 60px;"></div>
+<!-- 60px 替换为你的导航实际高度 -->
 
 
 
