--- a/cn.html
+++ b/cn.html
@@ -189,6 +189,9 @@
       text-align: left; /* 居中显示 */
       display: block;
     }
+
+
+    
     </style>
 
   <div class='nav-container'>
@@ -245,6 +248,14 @@
       <a class='slide' href='cn-contact.html'>
         <span class='element'>Co</span>
         <span class='name'>Contact<br>联系我</span>
+      </a>
+    </div>
+
+    <!-- 占位符 -->
+    <div>
+      <a class='slide' href='#'>
+        <span class='element'>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+        <span class='name'></span>
       </a>
     </div>
 
