--- a/ar-research.html
+++ b/ar-research.html
@@ -275,6 +275,14 @@
       </a>
     </div>
 
+    <!-- 占位符 -->
+    <div>
+      <a class='slide' href='#'>
+        <span class='element'>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+        <span class='name'></span>
+      </a>
+    </div>
+
   </div>
 </nav>
 <div class="display-mobile" style="height: 60px;"></div> 
@@ -378,7 +386,7 @@
           ">
           </div>
 
-      </div>
+        </div>
     </div>
       <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 5px;"></p>
 
