--- a/ar.html
+++ b/ar.html
@@ -235,6 +235,14 @@
       </a>
     </div>
 
+    <!-- 占位符 -->
+    <div>
+      <a class='slide' href='#'>
+        <span class='element'>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+        <span class='name'></span>
+      </a>
+    </div>
+
   </div>
 </nav>
 
