--- a/jp.html
+++ b/jp.html
@@ -337,6 +337,14 @@
     </a>
   </div>
 
+    <!-- 占位符 -->
+    <div>
+      <a class='slide' href='#'>
+        <span class='element'>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+        <span class='name'></span>
+      </a>
+    </div>
+
 </div>
 </nav>
 <div class="display-mobile" style="height: 60px;"></div> 
