--- a/ar-activities.html
+++ b/ar-activities.html
@@ -205,6 +205,7 @@
   </script>
 
   <script src="js/language.js"></script>
+  <script src="js/language_ar.js"></script>  
 
 
   <nav class="display-mobile">
@@ -413,8 +414,10 @@
             <option value="jp-activities.html">日本語</option>
             <option value="kr-activities.html">한국어</option>
           </select>
-          <img src="images/flag_sa.png" alt="flag" style="height:17px;display:inline-block;top:4px;position:relative;">
-          <img src="images/flag_uae.png" alt="flag" style="height:17px;display:inline-block;top:4px;position:relative;">
+          <img id="language-flag" 
+          style="height:15px; width:24px; display:inline-block; position:relative; top:3px; object-fit: cover; left:5px;" 
+          alt="flag" 
+          src="./images/wflags_svg/un.svg">
 
         </span>
       </h3>
