--- a/ar.html
+++ b/ar.html
@@ -386,7 +386,10 @@
             <option value="jp.html">日本語</option>
             <option value="kr.html">한국어</option>
           </select>
-          <img id="language-flag" style="height:15px; width:24px; display:inline-block; position:relative; top:3px; object-fit: cover;left: 5px;" alt="flag">
+          <img id="language-flag" 
+     style="height:15px; width:24px; display:inline-block; position:relative; top:3px; object-fit: cover; left:5px;" 
+     alt="flag" 
+     src="./images/wflags_svg/un.svg">
     
         </span>
       </h3>
