--- a/es-activities.html
+++ b/es-activities.html
@@ -381,7 +381,10 @@ Cervino, Suiza
       <h3 class="hidden-mobile">Actividades extracurriculares <small><small> <small></small></small> </small>
         <span style="float:right;font-family:verdana">
           <img src="./images/wflags_svg/es.svg" alt="flag"
-          style="height:15px; width:24px; display:inline-block; position:relative; top:3px; object-fit: cover;"><img id="language-flag" style="height:15px; width:24px; display:inline-block; position:relative; top:3px; object-fit: cover;left: 5px;" alt="flag">
+          style="height:15px; width:24px; display:inline-block; position:relative; top:3px; object-fit: cover;"><img id="language-flag" 
+     style="height:15px; width:24px; display:inline-block; position:relative; top:3px; object-fit: cover; left:5px;" 
+     alt="flag" 
+     src="./images/wflags_svg/un.svg">
         <select id="languages" name="languages"
             style="width: 75px; color:inherit;display:inline-block;margin-bottom:0px;"
             onchange="window.location.href=this.options [this.selectedIndex].value">
