--- a/en-activities.html
+++ b/en-activities.html
@@ -233,6 +233,14 @@
         </a>
       </div>
 
+ <!-- 占位符 -->
+ <div>
+  <a class='slide' href='#'>
+    <span class='element'>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+    <span class='name'></span>
+  </a>
+</div>
+
     </div>
   </nav>
 
