--- a/es-contact.html
+++ b/es-contact.html
@@ -188,8 +188,8 @@
     </div>
     <div>
       <a class='slide' href='es-research.html#publications'>
-        <span class='element'>Pb</span>
-        <span class='name'>Publicacion</span>
+        <span class='element'>Ar</span>
+        <span class='name'>Artículo</span>
       </a>
     </div>
     <div>
@@ -212,7 +212,13 @@
         <span class='name'>Contacto</span>
       </a>
     </div>
-
+ <!-- 占位符 -->
+ <div>
+  <a class='slide' href='#'>
+    <span class='element'>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+    <span class='name'></span>
+  </a>
+</div>
   </div>
 </nav>
 <div class="display-mobile" style="height: 60px;"></div> 
