--- a/ru-activities.html
+++ b/ru-activities.html
@@ -247,7 +247,13 @@
           <span class='name'>Связь</span>
         </a>
       </div>
-  
+   <!-- 占位符 -->
+   <div>
+    <a class='slide' href='#'>
+      <span class='element'>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+      <span class='name'></span>
+    </a>
+  </div>
     </div>
   </nav>
   
