--- a/ru.html
+++ b/ru.html
@@ -290,6 +290,14 @@
         </a>
       </div>
   
+        <!-- 占位符 -->
+        <div>
+          <a class='slide' href='#'>
+            <span class='element'>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+            <span class='name'></span>
+          </a>
+        </div>
+
     </div>
   </nav>
   
