--- a/ru-research.html
+++ b/ru-research.html
@@ -190,6 +190,15 @@
 
   <nav class="display-mobile">
 
+    <style>        
+      nav .slide .name {
+      font-size: 0.8em; /* 根据需要调整 */
+      text-align: left; /* 居中显示 */
+      display: block;
+    }
+
+    </style>
+
     <div class='nav-container'>
       <!-- Logo -->
       <div>
@@ -210,8 +219,8 @@
     <!-- Research -->
     <div>
       <a class='slide' href='ru-research.html'>
-        <span class='element'>Ис</span>
-        <span class='name'>Исследование</span>
+        <span class='element'>Ha</span>
+        <span class='name'>Наука</span>
       </a>
     </div>
   
@@ -226,16 +235,16 @@
     <!-- Education -->
     <div>
       <a class='slide' href='ru-resume.html'>
-        <span class='element'>Об</span>
-        <span class='name'>Образование</span>
+        <span class='element'>Ре</span>
+        <span class='name'>Резюме</span>
       </a>
     </div>
   
       <!-- Activities -->
       <div>
         <a class='slide' href='ru-activities.html'>
-          <span class='element'>Де</span>
-          <span class='name'>Дело</span>
+          <span class='element'>Ак</span>
+          <span class='name'>Активности</span>
         </a>
       </div>
   
@@ -246,13 +255,15 @@
           <span class='name'>Связь</span>
         </a>
       </div>
-   <!-- 占位符 -->
-   <div>
-    <a class='slide' href='#'>
-      <span class='element'>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-      <span class='name'></span>
-    </a>
-  </div>
+  
+        <!-- 占位符 -->
+        <div>
+          <a class='slide' href='#'>
+            <span class='element'>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+            <span class='name'></span>
+          </a>
+        </div>
+
     </div>
   </nav>
   
