--- a/ru.html
+++ b/ru.html
@@ -233,6 +233,15 @@
 
   <nav class="display-mobile">
 
+    <style>        
+      nav .slide .name {
+      font-size: 0.8em; /* 根据需要调整 */
+      text-align: left; /* 居中显示 */
+      display: block;
+    }
+
+    </style>
+
     <div class='nav-container'>
       <!-- Logo -->
       <div>
@@ -253,8 +262,8 @@
     <!-- Research -->
     <div>
       <a class='slide' href='ru-research.html'>
-        <span class='element'>Ис</span>
-        <span class='name'>Исследование</span>
+        <span class='element'>Ha</span>
+        <span class='name'>Наука</span>
       </a>
     </div>
   
@@ -269,16 +278,16 @@
     <!-- Education -->
     <div>
       <a class='slide' href='ru-resume.html'>
-        <span class='element'>Об</span>
-        <span class='name'>Образование</span>
+        <span class='element'>Ре</span>
+        <span class='name'>Резюме</span>
       </a>
     </div>
   
       <!-- Activities -->
       <div>
         <a class='slide' href='ru-activities.html'>
-          <span class='element'>Де</span>
-          <span class='name'>Дело</span>
+          <span class='element'>Ак</span>
+          <span class='name'>Активности</span>
         </a>
       </div>
   
