--- a/th-activities.html
+++ b/th-activities.html
@@ -284,9 +284,9 @@
 
             <p>____</p>
             <li><a href="en.html"><span>Biography</span></a></li>
-            <li><a href="en-research.html">Research</a></li>
-            <li><a href="en-resume.html">CV</a></li>
-            <li><a href="en-activities.html"><span style="color: rgb(253, 93, 7);">Activities ⏴</span></a></li>
+            <li><a href="th-research.html">Research</a></li>
+            <li><a href="th-resume.html">CV</a></li>
+            <li><a href="th-activities.html"><span style="color: rgb(253, 93, 7);">Activities ⏴</span></a></li>
             <li><a href="#">&nbsp;• Moderator</a></li>
             <li><a href="#writing">&nbsp;• Writing</a></li>
             <li><a href="#visiting">&nbsp;• Visiting</a></li>
@@ -294,7 +294,7 @@
             <li><a href="#gallery">&nbsp;• Gallery</a></li>
             <li><a href="#sports">&nbsp;• Sports</a></li>
             <p>____</p>
-            <li><a href="en-contact.html"><span style="color: rgb(253, 93, 7);">Contact</span></a></li>
+            <li><a href="th-contact.html"><span style="color: rgb(253, 93, 7);">Contact</span></a></li>
             <p>____</p>
 
             <p></p>
@@ -379,12 +379,12 @@
             <option value="es-activities.html">Español</option>
             <option value="fr-activities.html">Français</option>
             <option value="it-activities.html">Italiano</option>
-            <!---<option value="ru-activities.html">Русский</option>
+            <option value="ru-activities.html">Русский</option>
             <option value="cn-activities.html">中文</option>
             <option value="jp-activities.html">日本語</option>
             <option value="kr-activities.html">한국어</option>
             <option value="ar-activities.html">اللغة العربية</option>
-            --->
+            
           </select>
         </span>
       </h3>
@@ -393,7 +393,7 @@
 
 
       <div class="topnav">
-        <a href="en-activities.html" class="active">
+        <a href="th-activities.html" class="active">
           <h3 class="display-mobile">Dr. Hong Xu</h3>
         </a>
         <div id="myLinks">
@@ -404,51 +404,51 @@
                     style="color: rgb(44, 44, 44);">▸ <strong>Biography</strong></small></a><br>
               </li>
 
-              <li><a href="en-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Research
+              <li><a href="th-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Research
                         Progress</strong></span></small></a></li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-research.html#publications"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-research.html#publications"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Publications</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-research.html#patents"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-research.html#patents"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Patents</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-research.html#presentations"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-research.html#presentations"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Conferences</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-research.html#equity-research"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-research.html#equity-research"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Equity Research</small></a></li>
               </div>
 
-              <li><a href="en-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Curriculum
+              <li><a href="th-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Curriculum
                       Vitae</strong></small></a>
               </li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-resume.html#education-mobile"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-resume.html#education-mobile"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Education</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-resume.html#academic-experience"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-resume.html#academic-experience"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Academia</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-resume.html#industrial-experience"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-resume.html#industrial-experience"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Industry</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-resume.html#awards"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-resume.html#awards"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Awards</small></a></li>
               </div>
 
-              <li><strong><a href="en-activities.html"><small><span>▸ Extracurriculars
+              <li><strong><a href="th-activities.html"><small><span>▸ Extracurriculars
                         ★</span></small></a></strong></li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html">&nbsp;&nbsp;&nbsp;<small>•
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-activities.html">&nbsp;&nbsp;&nbsp;<small>•
                       Speaking</small></a></li>
                 <li style="width: 50%; box-sizing: border-box;"><a
-                    href="en-activities.html#writing">&nbsp;&nbsp;&nbsp;<small>• Writing</small></a></li>
+                    href="th-activities.html#writing">&nbsp;&nbsp;&nbsp;<small>• Writing</small></a></li>
                 <li style="width: 50%; box-sizing: border-box;"><a
-                    href="en-activities.html#visiting">&nbsp;&nbsp;&nbsp;<small>• Visiting</small></a></li>
+                    href="th-activities.html#visiting">&nbsp;&nbsp;&nbsp;<small>• Visiting</small></a></li>
                 <li style="width: 50%; box-sizing: border-box;"><a
-                    href="en-activities.html#travel">&nbsp;&nbsp;&nbsp;<small>• Traveling</small></a></li>
+                    href="th-activities.html#travel">&nbsp;&nbsp;&nbsp;<small>• Traveling</small></a></li>
                 <li style="width: 50%; box-sizing: border-box;"><a
-                    href="en-activities.html#photography">&nbsp;&nbsp;&nbsp;<small>• Photography</small></a></li>
+                    href="th-activities.html#photography">&nbsp;&nbsp;&nbsp;<small>• Photography</small></a></li>
                 <li style="width: 50%; box-sizing: border-box;"><a
-                    href="en-activities.html#sports">&nbsp;&nbsp;&nbsp;<small>• Sports</small></a></li>
+                    href="th-activities.html#sports">&nbsp;&nbsp;&nbsp;<small>• Sports</small></a></li>
               </div>
 
-              <li><a href="en-contact.html"><small style="color: rgb(44, 44, 44);">▸ <strong>Contact
+              <li><a href="th-contact.html"><small style="color: rgb(44, 44, 44);">▸ <strong>Contact
                       Me</strong></small></a><br></li>
               <hr>
             </div>
@@ -722,7 +722,7 @@
       <div class="doc-section" id="contact">
         <h3>Contact Me</h3>
         <ul class="square">
-          <li><strong>Message Board</strong>: <a href="en-contact.html"><span
+          <li><strong>Message Board</strong>: <a href="th-contact.html"><span
                 class='blue'>scholar.h-xu.com/en-contact</span></a> (Please kindly drop me the
             message)<br /></li>
           <!-- <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
