--- a/ar-activities.html
+++ b/ar-activities.html
@@ -415,10 +415,13 @@
             <option value="kr-activities.html">한국어</option>
           </select>
           <img id="language-flag" 
-          style="height:15px; width:24px; display:inline-block; position:relative; top:3px; object-fit: cover; left:5px;" 
+          style="height:15px; width:24px; display:inline-block; position:relative; top:3px; object-fit: cover; right:5px;" 
           alt="flag" 
           src="./images/wflags_svg/un.svg">
-
+          <img 
+          style="height:15px; width:24px; display:inline-block; position:relative; top:3px; object-fit: cover; left:0px;" 
+          alt="flag" 
+          src="./images/wflags_svg/Arab_League.svg">
         </span>
       </h3>
       <p class="hidden-mobile"></p>
