--- a/fr-research.html
+++ b/fr-research.html
@@ -196,7 +196,7 @@
     </div>
     <div>
       <a class='slide' href='fr-resume.html'>
-        <span class='element'>Fo</span>
+        <span class='element'>Fm</span>
         <span class='name'>Formation</span>
       </a>
     </div>
