--- a/th-contact.html
+++ b/th-contact.html
@@ -237,9 +237,9 @@
                   class='blue'>Analyst</span></a></li>
             <p>____</p>
             <li><a href="en.html">Biography</a></li>
-            <li><a href="en-research.html">Research</a></li>
-            <li><a href="en-resume.html">CV</a></li>
-            <li><a href="en-activities.html">Activities</a></li>
+            <li><a href="th-research.html">Research</a></li>
+            <li><a href="th-resume.html">CV</a></li>
+            <li><a href="th-activities.html">Activities</a></li>
             <p>____</p>
             <li><a href="en.html"><span style="color: rgb(253, 93, 7);">Contact ⏴</span></a></li>
             <p>____</p>
@@ -339,7 +339,7 @@
 
 
       <div class="topnav">
-        <a href="en-contact.html" class="active">
+        <a href="th-contact.html" class="active">
           <h3 class="display-mobile">Dr. Hong Xu</h3>
         </a>
         <div id="myLinks">
@@ -351,51 +351,51 @@
                     </small></a></strong><br>
               </li>
 
-              <li><a href="en-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Research
+              <li><a href="th-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Research
                         Progress</strong></span></small></a></li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-research.html#publications"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-research.html#publications"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Publications</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-research.html#patents"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-research.html#patents"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Patents</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-research.html#presentations"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-research.html#presentations"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Conferences</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-research.html#equity-research"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-research.html#equity-research"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Equity Research</small></a></li>
               </div>
 
-              <li><a href="en-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Curriculum
+              <li><a href="th-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Curriculum
                       Vitae</strong></small></a>
               </li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-resume.html#education-mobile"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-resume.html#education-mobile"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Education</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-resume.html#academic-experience"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-resume.html#academic-experience"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Academia</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-resume.html#industrial-experience"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-resume.html#industrial-experience"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Industry</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-resume.html#awards"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-resume.html#awards"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Awards</small></a></li>
               </div>
 
-              <li><a href="en-activities.html"><small style="color: rgb(97, 97, 97);">▸
+              <li><a href="th-activities.html"><small style="color: rgb(97, 97, 97);">▸
                     <strong>Extracurriculars</strong></small></a></li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-activities.html"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Speaking</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html#writing"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-activities.html#writing"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Writing</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html#visiting"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-activities.html#visiting"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Visiting</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html#travel"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-activities.html#travel"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Traveling</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html#photography"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-activities.html#photography"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Photography</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html#sports"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-activities.html#sports"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Sports</small></a></li>
               </div>
 
-              <li><a href="en-contact.html"><strong><small style="color: rgb(253, 93, 7);">▸ Contact
+              <li><a href="th-contact.html"><strong><small style="color: rgb(253, 93, 7);">▸ Contact
                       Me ★</strong></small></a><br></li>
               <hr>
             </div>
