--- a/th-research.html
+++ b/th-research.html
@@ -235,15 +235,15 @@
 
             <p>____</p>
             <li><a href="en.html"><span>Biography</span></a></li>
-            <li><a href="en-research.html"><span style="color: rgb(253, 93, 7);">Research ⏴</span></a></li>
+            <li><a href="th-research.html"><span style="color: rgb(253, 93, 7);">Research ⏴</span></a></li>
             <li><a href="#publications">&nbsp;• Publications</a></li>
             <li><a href="#patents">&nbsp;• Patents</a></li>
             <li><a href="#presentations">&nbsp;• Conferences</a></li>
             <li><a href="#equity-research">&nbsp;• Equity Research</a></li>
-            <li><a href="en-resume.html">CV</a></li>
-            <li><a href="en-activities.html">Activities</a></li>
+            <li><a href="th-resume.html">CV</a></li>
+            <li><a href="th-activities.html">Activities</a></li>
             <p>____</p>
-            <li><a href="en-contact.html"><span style="color: rgb(253, 93, 7);">Contact</span></a></li>
+            <li><a href="th-contact.html"><span style="color: rgb(253, 93, 7);">Contact</span></a></li>
             <p>____</p>
 
             <p></p>
@@ -340,7 +340,7 @@
 
 
       <div class="topnav">
-        <a href="en-research.html" class="active">
+        <a href="th-research.html" class="active">
           <h3 class="display-mobile">Dr. Hong Xu</h3>
         </a>
         <div id="myLinks">
@@ -350,53 +350,53 @@
               <li><img src="images/logo.png" style="float:right" width="45"><a href="en.html"><small
                     style="color: rgb(97, 97, 97);">▸ <strong>Biography</strong></small></a><br>
               </li>
-              <li><strong><a href="en-research.html"><small><span>▸ Research Progress
+              <li><strong><a href="th-research.html"><small><span>▸ Research Progress
                         ★</span></small></a></strong></li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
                 <li style="width: 50%; box-sizing: border-box;"><a
-                    href="en-research.html#publications">&nbsp;&nbsp;&nbsp;<small>• Publications</small></a></li>
+                    href="th-research.html#publications">&nbsp;&nbsp;&nbsp;<small>• Publications</small></a></li>
                 <li style="width: 50%; box-sizing: border-box;"><a
-                    href="en-research.html#patents">&nbsp;&nbsp;&nbsp;<small>• Patents</small></a></li>
+                    href="th-research.html#patents">&nbsp;&nbsp;&nbsp;<small>• Patents</small></a></li>
                 <li style="width: 50%; box-sizing: border-box;"><a
-                    href="en-research.html#presentations">&nbsp;&nbsp;&nbsp;<small>• Conferences</small></a>
+                    href="th-research.html#presentations">&nbsp;&nbsp;&nbsp;<small>• Conferences</small></a>
                 </li>
                 <li style="width: 50%; box-sizing: border-box;"><a
-                    href="en-research.html#equity-research">&nbsp;&nbsp;&nbsp;<small>• Equity Research</small></a>
+                    href="th-research.html#equity-research">&nbsp;&nbsp;&nbsp;<small>• Equity Research</small></a>
                 </li>
               </div>
 
-              <li><a href="en-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Curriculum
+              <li><a href="th-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Curriculum
                       Vitae</strong></small></a>
               </li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-resume.html#education-mobile"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-resume.html#education-mobile"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Education</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-resume.html#academic-experience"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-resume.html#academic-experience"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Academia</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-resume.html#industrial-experience"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-resume.html#industrial-experience"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Industry</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-resume.html#awards"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-resume.html#awards"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Awards</small></a></li>
               </div>
 
-              <li><a href="en-activities.html"><small style="color: rgb(97, 97, 97);">▸
+              <li><a href="th-activities.html"><small style="color: rgb(97, 97, 97);">▸
                     <strong>Extracurriculars</strong></small></a></li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-activities.html"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Speaking</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html#writing"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-activities.html#writing"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Writing</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html#visiting"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-activities.html#visiting"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Visiting</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html#travel"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-activities.html#travel"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Traveling</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html#photography"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-activities.html#photography"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Photography</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html#sports"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-activities.html#sports"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Sports</small></a></li>
               </div>
 
-              <li><a href="en-contact.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Contact
+              <li><a href="th-contact.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Contact
                       Me</strong></small></a><br></li>
               <hr>
             </div>
@@ -1296,7 +1296,7 @@
       <div class="doc-section" id="contact">
         <h3>Contact Me</h3>
         <ul class="square">
-          <li><strong>Message Board</strong>: <a href="en-contact.html"><span
+          <li><strong>Message Board</strong>: <a href="th-contact.html"><span
                 class='blue'>scholar.h-xu.com/en-contact</span></a> (Please kindly drop me the
             message)<br /></li>
           <!-- <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
