--- a/th-resume.html
+++ b/th-resume.html
@@ -159,11 +159,11 @@
       <div>
         <a class='slide' href='#'>
           <span class='element'>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-          <span class='name'><a href="en.html"><img src="./images/logo.png" style="width:30px; position:relative; top:-30px; left:6px;"></a></span>
+          <span class='name'><a href="th.html"><img src="./images/logo.png" style="width:30px; position:relative; top:-30px; left:6px;"></a></span>
         </a>
       </div>
       <div>
-        <a class='slide' href='en.html'>
+        <a class='slide' href='th.html'>
           <span class='element'>H</span>
           <span class='name'>Home</span>
         </a>
@@ -251,16 +251,16 @@
                   class='blue'>Analyst</span></a></li>
 
             <p>____</p>
-            <li><a href="en.html"><span>Biography</span></a></li>
-            <li><a href="en-research.html">Research</a></li>
-            <li><a href="en-resume.html"><span style="color: rgb(253, 93, 7);">CV ⏴</span></a></li>
+            <li><a href="th.html"><span>Biography</span></a></li>
+            <li><a href="th-research.html">Research</a></li>
+            <li><a href="th-resume.html"><span style="color: rgb(253, 93, 7);">CV ⏴</span></a></li>
             <li><a href="#education">&nbsp;• Education</a></li>
             <li><a href="#academic-experience">&nbsp;• Academic</a></li>
             <li><a href="#industrial-experience">&nbsp;• Industrial</a></li>
             <li><a href="#awards">&nbsp;• Awards</a></li>
-            <li><a href="en-activities.html">Activities</a></li>
+            <li><a href="th-activities.html">Activities</a></li>
             <p>____</p>
-            <li><a href="en-contact.html"><span style="color: rgb(253, 93, 7);">Contact</span></a></li>
+            <li><a href="th-contact.html"><span style="color: rgb(253, 93, 7);">Contact</span></a></li>
             <p>____</p>
 
             <p></p>
@@ -354,61 +354,61 @@
 
 
       <div class="topnav">
-        <a href="en-resume.html" class="active">
+        <a href="th-resume.html" class="active">
           <h3 class="display-mobile">Dr. Hong Xu</h3>
         </a>
         <div id="myLinks">
           <ul>
             <div style="background-color: rgba(252, 251, 248, 0);">
               <hr>
-              <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="en.html"><small
+              <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="th.html"><small
                       style="color: rgb(97, 97, 97);">▸ Biography</small></a></strong><br>
               </li>
 
-              <li><a href="en-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Research
+              <li><a href="th-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Research
                         Progress</strong></span></small></a></li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-research.html#publications"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-research.html#publications"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Publications</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-research.html#patents"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-research.html#patents"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Patents</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-research.html#presentations"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-research.html#presentations"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Conferences</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-research.html#equity-research"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-research.html#equity-research"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Equity Research</small></a></li>
               </div>
 
-              <li><a href="en-resume.html"><strong><a href="en.html"><small>▸ Curriculum Vitae
+              <li><a href="th-resume.html"><strong><a href="en.html"><small>▸ Curriculum Vitae
                         ★</small></a></strong></a></li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
                 <li style="width: 50%; box-sizing: border-box;"><a
-                    href="en-resume.html#education-mobile">&nbsp;&nbsp;&nbsp;<small>• Education</small></a></li>
+                    href="th-resume.html#education-mobile">&nbsp;&nbsp;&nbsp;<small>• Education</small></a></li>
                 <li style="width: 50%; box-sizing: border-box;"><a
-                    href="en-resume.html#academic-experience">&nbsp;&nbsp;&nbsp;<small>• Academia</small></a></li>
+                    href="th-resume.html#academic-experience">&nbsp;&nbsp;&nbsp;<small>• Academia</small></a></li>
                 <li style="width: 50%; box-sizing: border-box;"><a
-                    href="en-resume.html#industrial-experience">&nbsp;&nbsp;&nbsp;<small>• Industry</small></a></li>
+                    href="th-resume.html#industrial-experience">&nbsp;&nbsp;&nbsp;<small>• Industry</small></a></li>
                 <li style="width: 50%; box-sizing: border-box;"><a
-                    href="en-resume.html#awards">&nbsp;&nbsp;&nbsp;<small>• Awards</small></a></li>
+                    href="th-resume.html#awards">&nbsp;&nbsp;&nbsp;<small>• Awards</small></a></li>
               </div>
 
-              <li><a href="en-activities.html"><small style="color: rgb(97, 97, 97);">▸
+              <li><a href="th-activities.html"><small style="color: rgb(97, 97, 97);">▸
                     <strong>Extracurriculars</strong></small></a></li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-activities.html"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Speaking</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html#writing"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-activities.html#writing"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Writing</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html#visiting"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-activities.html#visiting"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Visiting</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html#travel"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-activities.html#travel"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Traveling</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html#photography"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-activities.html#photography"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Photography</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html#sports"
+                <li style="width: 50%; box-sizing: border-box;"><a href="th-activities.html#sports"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Sports</small></a></li>
               </div>
 
-              <li><a href="en-contact.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Contact
+              <li><a href="th-contact.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Contact
                       Me</strong></small></a><br></li>
               <hr>
             </div>
@@ -431,18 +431,17 @@
             <select id="languages" name="languages"
               style="width: 100px;color:inherit;display:inline-block;margin-bottom:0px;"
               onchange="window.location.href=this.options [this.selectedIndex].value">
-              <option value="en-resume.html" select>🇬🇧 English</option>
+              <option value="th-resume.html" select>🇹🇭 แบบไทย</option>
+              <option value="cn-resume.html">🇨🇳 中文</option>
+              <option value="jp-resume.html">🇯🇵 日本語</option>
+              <option value="kr-resume.html">🇰🇷 한국어</option>
+              <option value="en-resume.html">🇬🇧 English</option>
               <option value="de-resume.html">🇩🇪 Deutsch</option>
               <option value="es-resume.html">🇪🇸 Español</option>
               <option value="fr-resume.html">🇫🇷 Français</option>
               <option value="it-resume.html">🇮🇹 Italiano</option>
-              <!---
               <option value="ru-resume.html">🇷🇺 Русский</option>
-              <option value="cn-resume.html">🇨🇳 中文</option>
-              <option value="jp-resume.html">🇯🇵 日本語</option>
-              <option value="kr-resume.html">🇰🇷 한국어</option>
               <option value="ar-resume.html">🇸🇦 اللغة العربية</option>
-              --->
             </select>
           </span>
         </span>
@@ -715,7 +714,7 @@
       <div class="doc-section" id="contact">
         <h3>Contact Me</h3>
         <ul class="square">
-          <li><strong>Message Board</strong>: <a href="en-contact.html"><span
+          <li><strong>Message Board</strong>: <a href="th-contact.html"><span
                 class='blue'>scholar.h-xu.com/en-contact</span></a> (Please kindly drop me the
             message)<br /></li>
           <!-- <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
