--- a/en-research.html
+++ b/en-research.html
@@ -185,13 +185,44 @@
         </a>
       </div>
 
- <!-- 占位符 -->
- <div>
-  <a class='slide' href='#'>
-    <span class='element'>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-    <span class='name'></span>
-  </a>
-</div>
+      <div>
+        <a class='slide' href='en.html' 、">
+          <span class='element'>H</span>
+          <span class='name'>Home</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href='en-research.html'>
+          <span class='element'>Re</span>
+          <span class='name'>Research</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href='en-research.html#publications'>
+          <span class='element'>Pb</span>
+          <span class='name'>Publications</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href='en-resume.html'>
+          <span class='element'>Ed</span>
+          <span class='name'>Education</span>
+        </a>
+      </div>
+
+      <div>
+        <a class='slide' href='en-activities.html'>
+          <span class='element'>At</span>
+          <span class='name'>Activities</span>
+        </a>
+      </div>
+
+      <div>
+        <a class='slide' href='en-contact.html'>
+          <span class='element'>Co</span>
+          <span class='name'>Contact</span>
+        </a>
+      </div>
 
     </div>
   </nav>
