--- a/en-contact.html
+++ b/en-contact.html
@@ -550,20 +550,13 @@
         <text style="color:rgb(237, 118, 7);font-size:15px">➔ Contact Me </text>
         <span style="float:right;">
           <span style="float:right;font-family:verdana">
-            <select id="languages" name="languages"
-              style="width: 100px;color:inherit;display:inline-block;margin-bottom:0px;"
+            <select id="content-select" name="content-select"
+              style="width: 70px;color:inherit;display:inline-block;margin-bottom:0px;"
               onchange="window.location.href=this.options [this.selectedIndex].value">
-              <option value="en-contact.html" select>🇬🇧 English</option>
-              <option value="de-contact.html">🇩🇪 Deutsch</option>
-              <option value="es-contact.html">🇪🇸 Español</option>
-              <option value="fr-contact.html">🇫🇷 Français</option>
-              <option value="it-contact.html">🇮🇹 Italiano</option>
-              <!---<option value="ru-contact.html">🇷🇺 Русский</option>
-              <option value="cn-contact.html">🇨🇳 中文</option>
-              <option value="jp-contact.html">🇯🇵 日本語</option>
-              <option value="kr-contact.html">🇰🇷 한국어</option>
-              <option value="ar-contact.html">🇸🇦 اللغة العربية</option>
-              --->
+              <option value="mailto:h.xu@tum.de" select>Email</option>
+              <option value="https://calendly.com/heliosxu/45min">Meeting</option>
+              <option value="https://linkedin.com/in/xuhong/">LinkedIn</option>
+              <option value="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en">G-Scholar</option>
             </select>
           </span>
         </span>
