--- a/en.html
+++ b/en.html
@@ -333,7 +333,8 @@
           height: 12px;
           object-fit: fill;
           object-position: center;
-          display: block;
+          display: inline-block;
+          vertical-align: middle;
         }
         
         .hidden {
@@ -624,14 +625,14 @@
         <strong><a href="javascript:void(0);" class="icon" onclick="myFunction()"
             style="margin-top: 9px; display: inline-block;">
             <div style="display: flex; align-items: center;">
-              <span style="display: inline-block; height: 15px; line-height: 15px;"><small></small></span>
+              <span style="display: inline-block; height: 15px; line-height: 15px;"><small><small><small></small></small></small><small></small></span>
               <i class="fa fa-bars" style="margin-left: 5px; display: inline-block; height: 20px;"></i>
             </div>
           </a></strong>
       </div>
 
       
-      <p class="display-mobile" style="text-align:left;margin-bottom:20px;margin-top:5px;">
+      <p class="display-mobile" style="text-align:left;margin-bottom:20px;margin-top:0px;">
         <text style="color:rgb(237, 118, 7);font-size:14px">➔ Welcome friends from <span id="location2">the World</span>! <img style="float:right;height:14px;margin-top:4px;" id="country-flag-local-storage" src="./images/wflags/un.png"></text>
           <span style="float:right;">
            <!-- <span id="date-display-2"></span> -->
